// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles "no" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "n",
    "postback": Object {
      "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "我不想填理由",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "請問您為什麼覺得好心人的回應沒有幫助？請把理由打字傳給我們，幫助闢謠編輯釐清問題所在；若不想填，請按「我不想填理由」按鈕。",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_NOT_USEFUL_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "感謝您的回饋，您是第一個評論這個回應的人 :)",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "share_contents": Object {
                  "attachment": Object {
                    "payload": Object {
                      "elements": Array [
                        Object {
                          "buttons": Array [
                            Object {
                              "title": "看看別人的回應",
                              "type": "web_url",
                              "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
                            },
                          ],
                          "subtitle": "請至 https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz 看看鄉親們針對這則訊息的回應、理由，與所找的出處唷！",
                          "title": "網路上有人說「(0)(1)(/)(0)(⋯⋯」⚠️️ 不在查證範圍喔！",
                        },
                      ],
                      "template_type": "generic",
                    },
                    "type": "template",
                  },
                },
                "type": "element_share",
              },
              Object {
                "title": "提出新回應",
                "type": "web_url",
                "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
              },
            ],
            "template_type": "button",
            "text": "📲 別忘了把上面的回應轉傳回您的聊天室，給其他人也看看！
💁 若您認為自己能回應得更好，歡迎提交新的回應唷！",
          },
          "type": "template",
        },
      },
      "type": "generic",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "感謝您與其他 1 人的回饋。",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "share_contents": Object {
                  "attachment": Object {
                    "payload": Object {
                      "elements": Array [
                        Object {
                          "buttons": Array [
                            Object {
                              "title": "看看別人的回應",
                              "type": "web_url",
                              "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
                            },
                          ],
                          "subtitle": "請至 https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz 看看鄉親們針對這則訊息的回應、理由，與所找的出處唷！",
                          "title": "網路上有人說「(0)(1)(/)(0)(⋯⋯」⚠️️ 不在查證範圍喔！",
                        },
                      ],
                      "template_type": "generic",
                    },
                    "type": "template",
                  },
                },
                "type": "element_share",
              },
              Object {
                "title": "提出新回應",
                "type": "web_url",
                "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
              },
            ],
            "template_type": "button",
            "text": "📲 別忘了把上面的回應轉傳回您的聊天室，給其他人也看看！
💁 若您認為自己能回應得更好，歡迎提交新的回應唷！",
          },
          "type": "template",
        },
      },
      "type": "generic",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
